--- a/index.html
+++ b/index.html
@@ -6,25 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vision tools</title>
   <meta name="darkreader-lock">
+  
+  <link rel="stylesheet" href="vision.css">
+  
   <style>
-    :root {
-      --basefont: 7;
-      --fontsize: var(--basefont);
-      --bg: #000;
-      --fg: #fff;
-      --ctrlbg: #222;
-    }
-
     body {
-      background: var(--bg);
-      color: var(--fg);
       margin: 1em;
-      padding: 1em;
-    }
-
-    a {
-      margin: 1em;
-      font-size: 20pt;
     }
   </style>
 </head>
@@ -33,7 +20,7 @@
 
   <a href="visioncp.html">CP Saccades exercise</a><br />
 
-  <a href="visiongrid.html">Hart chats (Letter grid)</a><br />
+  <a href="visiongrid.html">Hart Chart</a><br />
 
 
 
