--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
   <a href="visiongrid.html">Hart Chart</a><br />
 
 
+  <a href="lettertracking.html">Letter Tracking exercise (wip)</a><br />
+
 
 </body>
 
