--- a/index.html
+++ b/index.html
@@ -6,24 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vision tools</title>
   <meta name="darkreader-lock">
-  
+
   <link rel="stylesheet" href="vision.css">
-  
+
   <style>
     body {
       margin: 1em;
+      font-size:20pt;
+    }
+
+    :is(h2,h3) a {
+      font-size:inherit;
+      text-decoration: none;
+      color:#6495ed;
     }
   </style>
 </head>
 
 <body>
 
-  <a href="visioncp.html">CP Saccades exercise</a><br />
-
-  <a href="visiongrid.html">Hart Chart</a><br />
+  <h2>Vision Therapy exercises</h2>
 
 
-  <a href="lettertracking.html">Letter Tracking exercise (wip)</a><br />
+  <h3><a href="visioncp.html">CP Saccades exercise</a></h3>
+  <!-- <div>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked.</div>
+  <div>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, pressing the space bar will advance the central marker to the next target.
+  </div> -->
+
+ <h3><a href="visiongrid.html">Hart Chart</a></h3>
+
+ <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
 
 
 </body>
