wordbank verification, files rename

--- a/hartchart.html
+++ b/hartchart.html
@@ -28,6 +28,9 @@
   <div id="main" data-mark="">
   </div>
 
+  <!-- TODO
+  QR code for mobile app to show mini version
+ -->
 
   <div id="controls">
     <div id="settings">*SETTINGS*</div>
