--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <h2>Vision Therapy exercises</h2>
 
 
-  <h3><a href="visioncp.html">CP Saccades exercise</a></h3>
+  <h3><a href="cpsaccades.html">CP Saccades exercise</a></h3>
 
- <h3><a href="visiongrid.html">Hart Chart</a></h3>
+ <h3><a href="hartchart.html">Hart Chart</a></h3>
 
  <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
 
