--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       font-size:20pt;
     }
 
-    :is(h2,h3) a {
+    a {
       font-size:inherit;
       text-decoration: none;
       color:#6495ed;
@@ -35,6 +35,9 @@
  <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
 
 
+ <div>
+  This project is open-source. Code and more information at <a href="https://github.com/visiontherapy/visiontherapy.github.io">https://github.com/visiontherapy/visiontherapy.github.io</a>.
+ </div>
 </body>
 
 </html>
