--- a/lettertracking.html
+++ b/lettertracking.html
@@ -4,10 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Letter Track</title>
+  <title>Letter Tracking</title>
   <meta name="darkreader-lock" />
 
   <link rel="stylesheet" href="vision.css" />
+  <script defer src="settings.js"></script>
 
   <style>
     #output {
@@ -22,22 +23,27 @@
 
     #showsolution:checked~#output {
       .selected {
-        color: grey; /* incorrect selection*/ 
+        color: red;
+        text-decoration: line-through;
+        /* incorrect selection*/
       }
 
       .alpha {
-        color: red; /* missed letter */
+        color: red;
+        /* missed letter */
         text-decoration: underline;
 
 
         &.selected {
-          color: aqua; /* correct selection */
+          color: green;
+          /* correct selection */
         }
       }
     }
 
     #output span.selected {
-      color: aqua; /* default selection */
+      color: aqua;
+      /* default selection */
     }
 
 
@@ -53,6 +59,8 @@
 
     #output span {
       border: solid 1px var(--bg);
+      display:inline-block;
+
     }
 
     #output span:hover {
@@ -63,95 +71,17 @@
 
 <body>
   Wordbank:
-  <textarea id="wordbank">
-There was nothing so very remarkable in that; nor did Alice think it so very much out of the way to hear the Rabbit say to itself, “Oh dear! Oh dear! I shall be late!” (when she thought it over afterwards, it occurred to her that she ought to have wondered at this, but at the time it all seemed quite natural); but when the Rabbit actually took a watch out of its waistcoat-pocket, and looked at it, and then hurried on, Alice started to her feet, for it flashed across her mind that she had never before seen a rabbit with either a waistcoat-pocket, or a watch to take out of it, and burning with curiosity, she ran across the field after it, and fortunately was just in time to see it pop down a large rabbit-hole under the hedge. THE term novel has been made to cover books of such diverse character,
-now-a-days, that the reader is almost entitled to demand of a novelist
-that he shall affix some distinct label to the book he is putting
-forth, and make it clear beforehand whether his work is a dialogue on
-religion, a satire on morals, a political tract, a study in slum life,
-or a mere romance. This consideration must serve as my excuse for
-saying a few words about the ideas which have guided me in writing the
-present work; although I shall incur the danger of a comparison between
-the moon at which I have aimed, and the humble tree which I have hit.
-
-In this story, then, as in some others which I have written, or am
-writing, I have sought to embody the romance of contemporary history.
-It cannot be true that one age or country is in reality more poetical
-than any other; the difference, if any, must be that it requires a
-little more imagination to perceive the romance which lies around us,
-than that which is ready gathered for us in the pages of the historian.
-If it be said that some of the greatest masters have gone to past
-times for their inspiration, their disciple may perhaps allege that as
-a reason for not venturing into the well-trodden ground. But in fact
-many of the books which have been most admired in the class of what are
-called historical novels have owed a part of their charm to the flavour
-of antiquity which their accomplished writers have contrived to impart
-to them by mannerisms of style and by the copious use of historical
-allusion. However great the attraction of such writing may be, it must
-not be forgotten that the greatest, perhaps the first, of historical
-romancers--I mean Shakespeare--relied upon no such artifices, but on
-the intrinsic interest of his themes and his dramatic presentation
-of them. Neither is it the antiquarian taste which is appealed to by
-such a book as the “Three Musketeers.” It may even be affirmed, on the
-other hand, that the interest with which stories are thus invested is
-essentially false, and foreign to the story-tellers art.
-
-The keen pleasure with which the historical scholar reads the “Iliad”
-and the “Odyssey” is the accidental result of time, and certainly
-never entered into the aims of the composer or compiler of those
-works. The novels of Emile Zola may similarly fascinate the student
-in years to come, because he will feel that the manners they record
-are genuine. But with what confidence can he regard the Wardour Street
-properties which bulk so largely in the novels of some modern writers?
-Unless these books tell stories whose interest is independent of
-adventitious attraction, assuredly they will not continue to be read.
-
-The true aim of the artist in fiction must always be to describe an
-interesting action,--the Greeks would have said, a great action. The
-characters which still live for us in fiction are those which their
-creators have revealed to us through their actions. The analytical
-novel of character, as it is termed, bears the same relation to true
-romance as the surgeons anatomical model bears to a portrait of
-Velasquez. It is the business of the story-teller to produce, not a
-photograph of one who sits in a chair, but a kinetoscope, with every
-limb in motion. The analytical novelist, when he has written his
-analytical novel, should regard it as merely a preparatory study, and
-should tear it up and then write a real novel in which the characters
-so carefully analysed will by their movements disclose all those
-traits of which their creator has laboured to convince himself.
-
-This is why the play is greater than the novel. The playwright--robbed
-of his Chorus--cannot inflict upon us these tedious dissertations, he
-cannot leave his persons standing about idly on the stage, while he
-lectures to us on their inner nature as revealed to his Röntgen vision.
-The story told in these pages was conceived by the author as the
-subject of a play. The only reason it appears in the guise of a novel
-is because, when it was written, the author had no acquaintance with
-theatrical managers, and a play written merely to be read in a book has
-always appeared to him a monstrosity. He therefore reconstructed his
-romance, making such alterations as seemed needful when the characters
-were no longer visible of themselves, and when, moreover, he was
-debarred from that crowding of circumstance, that rush and climax of
-events, which the stage demands and justifies, but which on the written
-page would seem abrupt and harsh.
-
-Most readers will trace in the hero of this book a resemblance to a
-certain king whose fate attracted attention not so very many years ago.
-I would ask that the comparison shall be carried no farther. This book
-is in no sense taken from history. All that I have intended to do has
-been to conceive a romantic interpretation for a tragical event, and to
-set forth that interpretation as a story to be read for its own sake,
-if at all.
-
-</textarea>
+  <textarea id="wordbank">th to ts te ti tu tc ta ty tl tt tr tw tg he hi ha ho ht hu hr hy er em ea el en ed ee et ev ef ei eh ex ew es eq eg ey ec ep ek eo ez eb re ry rk ra rw rd rr ri rt ro rn rg rm rs rv ru rc rh rl rp wa wh wo wi wn wr we wd as ar ab at al ay af av ac ai an ad ak am ag ap au ax no ng nk nd na ne ni nt nc ns nn ny nv nl nu nf ot or ou of oh ov oc on oo ok oa os op ow ol om og od oe ob ox in id ic it is im ie io iv ix ia ig ir if ip iq il ib so sa se sh st ss si su sl sp sc sm sk sq ve vo vi ma mu me mi mo my mp mb ms ka ke ks ki bl bb bi be bu bo by bj ba br le li lf ll la ly lo ld lm ls lu lt lk lw lv di de ds do dg da dy dd dm dr dv dl du df ce ch cc cu ct co ck cr cl ca ci cq uc ut ug ur ui ua un us ue ud um up ul ub gh ge gu gi ga gr go gn ft fe fo fl fi ff fa fu fr qu po pu pr pa pe pi pl ps pp ph pt ju je ys yi yl ye yt yw xc xe xy zo ze </textarea>
   <button id="go">go</button>
   <br />
-  <button id="reload">newchart</button>
+  <button id="reload">New Chart</button>
+
+  <input type="checkbox" id="darkmode" /><label class="button" for="darkmode">Dark mode</label>
 
   <input type="checkbox" id="startstop" />
   <label class="button" for="startstop">start</label>
   <span id="timer"></span>
-  
+
   <input type="checkbox" id="showsolution" />
   <label class="button" for="showsolution">Show Solution</label>
   <div id="output"></div>
@@ -217,15 +147,19 @@ if at all.
         }
       }
 
-      console.log(digraphs);
+      // console.log(digraphs);
 
-      let flatdigraphs = "";
-      for (const prima of Object.keys(digraphs)) {
-        for (const secund of Object.keys(digraphs[prima])) {
-          flatdigraphs += prima + secund + " ";
-        }
-      }
-      console.log(flatdigraphs);
+      //** This section is for debugging only
+      //** replace wordbank text with flatdigraphs to make it more concise
+      // let flatdigraphs = "";
+      // for (const prima of Object.keys(digraphs)) {
+      //   for (const secund of Object.keys(digraphs[prima])) {
+      //     flatdigraphs += prima + secund + " ";
+      //   }
+      // }
+      // console.log(flatdigraphs);
+
+
     }
 
 
@@ -274,8 +208,8 @@ if at all.
       // console.log(digraphs.length>0,digraphs); return;
 
       if (Object.keys(digraphs).length == 0) {
-        console.log("bad digraph collection", digraphs);
-        console.log("Missing:", missing);
+       document.querySelector("#output").innerText = "Word bank is incomplete. The following letters are missing: " + missing.join(", ") + ".";
+        // console.log("bad digraph collection", digraphs);
         return;
       }
       document.querySelector("#showsolution").checked = false;
