--- a/cpsaccades.html
+++ b/cpsaccades.html
@@ -26,9 +26,9 @@
     
     <div>Circle spacing <input id="spaceslider" type="range" min="0.5" max="2" value="1" step="0.05" /> <span id="spacescale"></span></div>
 
-    <div><input type="checkbox" id="colormode" /><label class="button" for="colormode">Colorful markers</label></div>
+    <div><input type="checkbox" class="slider"  id="colormode" /><label class="button" for="colormode">Colorful markers</label></div>
 
-    <div><input type="checkbox" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
+    <div><input type="checkbox" class="slider" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
   </div>
 
 
