--- a/hartchart.html
+++ b/hartchart.html
@@ -35,7 +35,7 @@
   <div id="controls">
     <div id="settings">*SETTINGS*</div>
 
-    <div><input type="checkbox" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label></div>
+    <div><input type="checkbox" class="slider" id="darkmode" checked="checked" /><label for="darkmode">Dark mode</label></div>
     <button id="metronome">metronome</button><br />
     <div id="tapp">TAP</div><input type="text" id="bpm" /><br />
 
