--- a/lettertracking.html
+++ b/lettertracking.html
@@ -76,13 +76,13 @@
   <br />
   <button id="reload">New Chart</button>
 
-  <input type="checkbox" id="darkmode" /><label class="button" for="darkmode">Dark mode</label>
-
+  <input type="checkbox" class="slider"  id="darkmode" /><label class="button" for="darkmode">Dark mode</label>
+<br/>
   <input type="checkbox" id="startstop" />
   <label class="button" for="startstop">start</label>
   <span id="timer"></span>
-
-  <input type="checkbox" id="showsolution" />
+<br/>
+  <input type="checkbox" class="slider" id="showsolution" />
   <label class="button" for="showsolution">Show Solution</label>
   <div id="output"></div>
 
