--- a/hartchart.html
+++ b/hartchart.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -331,6 +332,10 @@ https://ircam-ismm.github.io/webaudio-tutorials/scheduling/timing-and-scheduling
       return nextchar;
     }
 
+
+    document.querySelector("#reload").onclick = function (e) {
+      showchart();
+    };
 
 
   </script>
