--- a/index.html
+++ b/index.html
@@ -12,13 +12,26 @@
   <style>
     body {
       margin: 1em;
-      font-size:20pt;
+      font-size: 20pt;
     }
 
     a {
-      font-size:inherit;
+      font-size: inherit;
       text-decoration: none;
-      color:#6495ed;
+      color: #6495ed;
+    }
+
+    h2,h3 {
+      margin: 1.5em 0 0.25em;
+    }
+
+    div {
+      margin: 0.5em 1em;
+      text-indent: 2em;
+    }
+
+    .plain {
+      text-indent: 0;
     }
   </style>
 </head>
@@ -26,18 +39,47 @@
 <body>
 
   <h2>Vision Therapy exercises</h2>
-
+   <div class="plain">
+    This open-source project is a work in progress.<br/>
+    To view the code, contribute, or provide feedback, visit:<br/>
+    <a href="https://github.com/visiontherapy/visiontherapy.github.io">https://github.com/visiontherapy/visiontherapy.github.io</a>.
+  </div>
 
   <h3><a href="cpsaccades.html">CP Saccades exercise</a></h3>
+  <div>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked.</div>
 
- <h3><a href="hartchart.html">Hart Chart</a></h3>
-
- <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
+  <div>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</div>
 
 
- <div>
-  This project is open-source. Code and more information at <a href="https://github.com/visiontherapy/visiontherapy.github.io">https://github.com/visiontherapy/visiontherapy.github.io</a>.
- </div>
+  <h3><a href="hartchart.html">Hart Chart</a></h3>
+  <ul>
+    <li>Read each letter at a steady pace.</li>
+    <li>Use metronome if needed, to maintain the pace.
+      <ul>
+        <li>Built in metronome may stutter occasionally as it is not 100% accurate</li>
+      </ul>
+    </li>
+  </ul>
+
+  <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
+  <ul>
+    <li>Target word count of 70
+      <ul>
+        <li>If all letters are not shown within target word count, the script will continue generating words until all letters are accounted for.</li>
+      </ul>
+    </li>
+
+    <li>Allowable letter combinations taken from "wordbank".
+      <ul>
+        <li>This can be customized by entering any text into the wordbank input box.</li>
+        <li>If all letters are not present in the text, the script will show an error.</li>
+      </ul>
+
+    </li>
+
+
+  </ul>
+
 </body>
 
 </html>
