--- a/hartchart.html
+++ b/hartchart.html
@@ -22,6 +22,9 @@
       text-align: center;
     }
   </style>
+  <!-- https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/ -->
+  <!-- https://dev.to/murtuzaalisurti/how-to-make-a-qr-code-generator-using-vanilla-javascript-3cla -->
+  <script src="qrcode.min.js"></script>
 </head>
 
 <body>
