--- a/hartchart.html
+++ b/hartchart.html
@@ -29,7 +29,7 @@
     #main {
       height: min(85vh, 85vw);
       width: min(85vh, 85vw);
-      top: min(7vh, 7vw);
+      top: clamp(2.5rem,2.5em,10vh);
       display: grid;
       grid-template-columns: repeat(10, 1fr);
     }
