--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <li>Built in metronome may stutter occasionally as it is not 100% accurate</li>
       </ul>
     </li>
+<li>Scan the QR code with a mobile device to mirror the chart to do the near/far accommodation exercise.</li>
   </ul>
 
   <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
